--- a/var/www/html/torrentwatch-xa/css/ie.css
+++ b/var/www/html/torrentwatch-xa/css/ie.css
@@ -1,27 +1,1 @@
-
-div#topmenu {
-    border: 0px;
-}
-
-ul#filterbar_container {
-    border: 0px;
-}
-
-ul#clientButtons {
-    top: 58px;
-}
-div#torrentlist_container {
-    top: 59px;
-}
-
-div#history {
-    height: 256px;
-}
-
-div#linkButtons  {
-    margin-bottom: 5px;
-}
-
-div#configuration div.config_form input#hideSearchText {
-    border-bottom: 1px solid #979797;
-}
+#topmenu{border:0}#filterbar_container{border:0}#clientButtons{top:58px}#torrentlist_container{top:59px}#history{height:256px}#linkButtons{margin-bottom:5px}#configuration .config_form_container input#hideSearchText{border-bottom:1px solid #979797}
