--- a/var/www/html/torrentwatch-xa/css/torrentwatch-xa.css
+++ b/var/www/html/torrentwatch-xa/css/torrentwatch-xa.css
@@ -369,6 +369,15 @@ label.category {
     padding: 0 5px 0 5px;
 }
 
+#clientButtons li.button .start,
+#clientButtons li.button .resume,
+#clientButtons li.button .pause,
+#clientButtons li.button .delete,
+#clientButtons li.button .trash,
+#clientButtons li.button .move_button,
+#clientButtons li.close .hidden
+{}
+
 #clientButtons li.disabled,
 #clientButtons li.disabled:hover {
     border-bottom: 1px solid #aaa;
@@ -1114,6 +1123,8 @@ div.legend input {
     z-index: 99;
     margin-left: -125px;
 }
+
+.progressbar .dialog_window {}
 
 /*****************************
  * C O N F I G   D I A L O G
